--- a/.github/workflows/build-and-publish-image.yml
+++ b/.github/workflows/build-and-publish-image.yml
@@ -61,7 +61,7 @@ jobs:
           context: .
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:devel
-          #build-args: |
-            #"CONTAINER_VERSION=${{ env.VERSION }}"
+          build-args: |
+            CONTAINER_VERSION=${{ env.VERSION }}
           
           #labels: ${{ steps.meta.outputs.labels }}
