--- a/.github/workflows/optimize-docs-images.yml
+++ b/.github/workflows/optimize-docs-images.yml
@@ -20,11 +20,11 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libmagick++-dev
+        sudo apt-get install -y libmagick++-dev libcurl4-openssl-dev
 
     - name: Install R packages and run script
       run: |
-        R -e 'install.packages(c("magick", "tools"), repos = "https://cloud.r-project.org/")'
+        R -e 'install.packages(c("curl","magick", "tools"), repos = "https://cloud.r-project.org/")'
         Rscript ./scripts/optimize.R
 
     - name: Commit and push optimized images
