--- a/.github/workflows/build-and-publish-image.yml
+++ b/.github/workflows/build-and-publish-image.yml
@@ -8,22 +8,14 @@ name: Build and publish Docker image
 on:
   workflow_dispatch:
   pull_request:
-    branches: ["main","devel"]
-    types: [closed]
-    paths:
-      - '.github/workflows/build-and-publish-image.yml'
-      - 'Dockerfile'
-      - 'reinstall-cmake.sh'
-      - 'VERSION'
-  
+
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: startrooper08/r-dev-env
+  IMAGE_NAME: ubdbra001/r-dev-env
 
 jobs:
   build-and-push-image:
-    if: ${{github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true}}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -44,12 +36,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Log in to the Container registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ${{ env.REGISTRY }}
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -62,17 +54,12 @@ jobs:
             type=semver,pattern={{ env.VERSION }}
             type=sha
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
-          build-args: |
-            CONTAINER_VERSION=${{ env.VERSION }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
 
+      - name: Build ARM docker image via bash
+        run: |
+          docker buildx build --progress=plain --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:arm_test --build-arg CONTAINER_VERSION=${{ env.VERSION }} .
 
       - name: Build and push ARM based Docker image
         uses: docker/build-push-action@v5
