--- a/.github/workflows/build-and-publish-image.yml
+++ b/.github/workflows/build-and-publish-image.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Build ARM docker image via bash
         run: |
-          docker buildx build --progress=plain --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:arm_test --build-arg CONTAINER_VERSION=${{ env.VERSION }} .
+          docker buildx build --progress=plain --platform linux/arm64 -t r-dev-env:arm_test --build-arg CONTAINER_VERSION=${{ env.VERSION }} .
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
